# vorlage

./: .clang-format  .clang-tidy  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  authors  authors.md  changelog.md  code-of-conduct.md  contributing.md  leadership.md  license  maintainers.md  readme.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
.gitlab/ci/: analysis.yml  compiler.yml  container.yml  deployment.yml  documentation.yml  format.yml  input_data.yml  os.yml  sanitizer.yml  shell.yml  system.yml  valgrind.yml
base/: CMakeLists.txt
base/include/basevorlage/: path_info.hpp
base/lib/: CMakeLists.txt
base/lib/basevorlage/: CMakeLists.txt  path_info.cpp
bench/: CMakeLists.txt
bench/lib/: CMakeLists.txt
ci/share/docker/: helper.sh
ci/share/ssh/: reporter.enc  reporter.pub
cmake/configure/: doxyfile.in  vorlageConfig.cmake.in
cmake/include/: base.cmake  coverage.cmake  dependency.base.cmake  dependency.bench.cmake  dependency.test.cmake  external.bench.cmake  external.cmake  external.test.cmake  install.cmake  library.cmake  option.cmake  process.option.cmake  system.cmake
cmake/module/: FindVanadium.cmake
cmake/module/vanadium/: codegen.cmake  coverage.cmake  coverage.dummy.cmake  doxygen.cmake  filesystem.cmake
cmake/module/vanadium/codegen/: cmake.cmake
cmake/module/vanadium/coverage/: clang.cmake
dev/etc/: meta.sh
dev/share/clang-format/: formatter.sh
dev/share/clang-tidy/: linter.list  linter.options
doc/doxygen/: index.md
src/: CMakeLists.txt
src/cmake/include/: dependency.cmake  external.cmake  install.cmake  option.cmake  process.option.cmake
src/codegen/: CMakeLists.txt
src/codegen/cmake/paket/meta/: project.hpp.cmake.codegen  version.hpp.cmake.codegen
src/codegen/cmake/vorlage/meta/: project.hpp.cmake.codegen  version.hpp.cmake.codegen
src/include/vorlage/: vorlage.hpp
src/lib/: CMakeLists.txt
src/lib/vorlage/: CMakeLists.txt  vorlage.cpp
test/: CMakeLists.txt
test/cmake/include/: dependency.cmake  external.cmake  option.cmake  process.option.cmake  system.cmake  unit_test.cmake
test/lib/: CMakeLists.txt
test/lib/testvorlage/: CMakeLists.txt  testvorlage.cpp
